# school-api

./: Cargo.toml
src/: main.rs
