[package]
name = "school-api"
version = "0.1.0"
edition = "2021"

[dependencies]
rocket = { version = "0.5.0-rc.3", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
mongodb = "2.8.0"  # O la última versión disponible
futures = "0.3"
rocket_cors = "0.6.0"
